--- a/bibs/r-references.bib
+++ b/bibs/r-references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2019-12-14 17:59:20 +0100 
+%% Created for Aviad Albert at 2020-09-18 16:47:16 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,7 +18,8 @@
 	Bdsk-Url-1 = {https://www.R-project.org/}}
 
 @article{R-brms_a,
-	Author = {Paul-Christian B{\"u}rkner},
+	Author = {B{\"u}rkner, {Paul-Christian}},
+	Date-Modified = {2020-09-18 16:47:02 +0200},
 	Doi = {10.18637/jss.v080.i01},
 	Encoding = {UTF-8},
 	Journal = {Journal of Statistical Software},
@@ -30,7 +31,8 @@
 	Bdsk-Url-1 = {https://doi.org/10.18637/jss.v080.i01}}
 
 @article{R-brms_b,
-	Author = {Paul-Christian B{\"u}rkner},
+	Author = {B{\"u}rkner, {Paul-Christian}},
+	Date-Modified = {2020-09-18 16:47:05 +0200},
 	Encoding = {UTF-8},
 	Journal = {The R Journal},
 	Number = {1},
