--- a/load.tex
+++ b/load.tex
@@ -3,11 +3,11 @@
 \usepackage[utf8]{inputenc}
 \usepackage{regexpatch}
 % \usepackage{times}
-\usepackage{tipa}
-% \usepackage{fontspec}
-% \defaultfontfeatures{Mapping=tex-text}
-% \setmainfont{Charis SIL}
-% \setsansfont[Scale=MatchLowercase,Mapping=tex-text]{Charis SIL}
-% \setmonofont[Scale=MatchLowercase]{Andale Mono}
+% \usepackage{tipa}
+\usepackage{fontspec}
+\defaultfontfeatures{Mapping=tex-text}
+\setmainfont{Charis SIL}
+\setsansfont[Scale=MatchLowercase,Mapping=tex-text]{Charis SIL}
+\setmonofont[Scale=MatchLowercase]{Andale Mono}
 \makeatletter
 \xpatchcmd{\@todo}{\setkeys{todonotes}{#1}}{\setkeys{todonotes}{inline,#1}}{}{}
