--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2020-01-21 11:03:57 +0100 
+%% Created for Aviad Albert at 2020-10-16 01:25:25 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -50,10 +50,10 @@
 @book{pattee2012lawssk,
 	Address = {Dordrecht},
 	All_Isbns = {9789400751606 9400751605 9789400751613 9400751613},
-	Author = {Pattee, Howard H. and Raczaszek-Leonardi, Joanna},
+	Author = {Pattee, Howard H. and R{\k a}czaszek-Leonardi, Joanna},
 	Citation_Identifier = {Pattee 2012},
 	Date-Added = {2019-12-14 17:32:01 +0100},
-	Date-Modified = {2019-12-14 17:32:50 +0100},
+	Date-Modified = {2020-10-16 01:25:23 +0200},
 	Isbn = {9789400751606},
 	Keywords = {Continuity/Discreteness;Linguistics;Cognition;NAP_paper;Evolution},
 	Notes = {(325b) (314a) (27) (313fn5) (308) (40b) (300b) (303b) (43b) (35) (22) (332) (326) (317) (314c-315) (311c-312) (314) (306c) (32-33) (315) (331b) (40c) (23a) (313a) (43) (304b) Chunk-and-pass!!!!(321b-322) (315a) (309b) (305a) (26) (312b-313) (320) (316) (326) (301b) (33b-34) (300a) (312) (309a) (43a) (40a) (318c) (303a) (37c-38) (35b) (36) (37a) (329a) (320) (306d) (307e-308) (315b) (37b) (314b) (328) (320e-321) (318) (302b) (304a) (311) (308c) (320d) (42c-43) (33) (34) (310a) (307c) (30c) (321) (21-22) (331a) (33a) (311b) (312) (306a) (35c-36) (320a) 1(325a) (318b) (320b) (324a) (303c) (329b) (319b) (31c-32) (34) (34d) (31a) (324b) (35a) (304c) (305) (28) (39b) (38) (43c) (311) (325c) (22) (25) (313b-314) (310) (41) (42b) (311a) (327) (310b) (301a) (319a) (308b) (319c-320) (34b) (310c-311) (311) (35) (42a) (34c) (30a) (304d-305) (307a) (305b) (34e) (316-317) (34a) (330) (40e-41) (39c) (320c) (303d-304) (40d) (317b) (299) (317c-318) (331c-332) (307d) (39a) (30b) (313) (306b) (23b) (328) (325d-326) (30d) (322) (32) (321) (41b) (308a) (304) (38) (317a) (20) (31b) (318a) (333) (312a) (41a) (307b) (302a) (325) (34f-35)},
