--- a/bibs/r-references.bib
+++ b/bibs/r-references.bib
@@ -189,3 +189,10 @@
 	Url = {https://CRAN.R-project.org/package=Cairo},
 	Year = {2019},
 	Bdsk-Url-1 = {https://CRAN.R-project.org/package=Cairo}}
+@Manual{R-extrafont,
+  title = {extrafont: Tools for using fonts},
+  author = {Winston Chang,},
+  year = {2014},
+  note = {R package version 0.17},
+  url = {https://CRAN.R-project.org/package=extrafont},
+}
