updated complementary models and reshuffling dichotomies sections

--- a/CogNAP_paper.Rmd
+++ b/CogNAP_paper.Rmd
@@ -119,12 +119,14 @@ and the *Minimum Sonority Distance*
 We use a Bayesian data analysis approach to test and compare the six different sonority models. Whereas all the different models are found to be capable of predicting the experimental results to some extent, the symbolic top-down version of NAP is shown to be superior and appears to exhibit the highest degree of complementarity with the bottom-up model of NAP.
 
 Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, most importantly, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiment and in Section \@ref(sec:genDiscussion) we address some relevant implications, 
-where we discuss the usefulness of the top-down vs. bottom-up distinction instead of the common use of 'phonology vs. phonetics' to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)).
+where we discuss the usefulness of the top-down vs. bottom-up distinction instead of the common use of the phonology--phonetics dichotomy to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)).
 We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)).
 <!-- where we discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)).  -->
 <!-- We also discuss the usefulness of the top-down vs. bottom-up distinction instead of the common use of phonology vs. phonetics to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)). -->
 
-Finally, we conclude this paper in Section \@ref(sec:conclusions). Section \@ref(sec:methods) (*Methods*) provides technical details on the procedures used in the experiments.
+<!-- Finally,  -->
+We present our concluisons in Section \@ref(sec:conclusions) and we provide the technical details on the procedures used in the experiments in Section \@ref(sec:methods).
+<!-- . Section \@ref(sec:methods) (*Methods*) provides technical details on the procedures used in the experiments. -->
 In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles, emphasizing their rationale, their application, and their inherent flaws (Subsections \@ref(sec:hierarchies)-\@ref(sec:failures)). 
 
 ## Sonority hierarchies {#sec:hierarchies}
@@ -466,18 +468,26 @@ The impressionistic descriptions of NAP, as provided in this section, are implem
 ##		Complementary cognitive models {#sec:complementary}
 
 NAP essentially models a bottom-up process, describing the parsing of the stream of speech into syllables as the end of a process that starts in perception.
-We assume that perception and cognition are continuous processes that can activate categorical
-representations [see @case1995evaluation; @gafos2006dynamics; @lancia2013interaction; @roessig2019dynamics for derivation of linguistic categories from continuous inputs]. 
-These categorical representations are the learned symbols of the system in abstract terms, readily equated with co-activation of neural populations in the brain in physical terms [see, e.g., @friederici2011brain; @mesgarani2014phonetic; @tang2017intonational].
+This is so because NAP is designed to agree with physical rules and cognitive processing relating to our capacity to process pitch in communicative contexts.
+However, in order to model the top-down contribution of sonority to the well-formedness of syllables, our NAP model should be also able to operate on abstract symbolic entities, like consonants and vowels. Therefore, the mechanisms that should be available to symbol-based processes need to qualitatively differ from the dynamic models that are available to bottom-up signal-based processes
+<!-- the dynamic modes of bottom-up continuous signals  -->
+and instead be based on the distributional probability of recognized symbols, given their history in the system.
 
-Once learned and established, symbols can feed top-down inferences that play a role alongside bottom-up inferences in perception [see e.g., @connor2004visual; @pinto2013bottom; @shuai2014temporal].
-Top-down perception inferences in our framework are different from bottom-up inferences in that top-down inferences access categorical representations, where speech is analyzable in terms of discrete symbols. Top-down inferences are thus limited to predictions that are based on the distributional probability of the recognized symbols, given their (constantly updated) history in the system.
-This type of top-down inferences, which are detached from the functional aspects of the bottom-up mode, echo models of the language user as a *statistical learner* [see, e.g., @christiansen1999power; @frisch2001psychologicalsk; @tremblay2013processing; @roettger2019evidential] and, more specifically, they are very much in line with models of *phonotactic learners* [e.g., @coleman1997stochastic; @vitevitch2004webbasedsk; @bailey2001determinants; @hayes2008maximum; @hayes2011interpreting; @albright2009feature; @daland2011explaining; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotactic; @mirea2019usingsk].
-
-In this paper we do not explore the statistical nature of top-down inferences. Instead, we operationalize the rationale behind NAP with symbolic machinery to present what we refer to as the top-down model of NAP. It is therefore important to note that our model implementation for the top-down version of NAP is not an attempt to directly reflect top-down cognitive processes.
+The above description of top-down inferences, which are detached from the functional aspects of the bottom-up route, echo models of the language user as a *statistical learner*
+<!-- [see, e.g., @christiansen1999power; @frisch2001psychologicalsk; @tremblay2013processing; @roettger2019evidential]  -->
+and, more specifically, they are very much in line with models of *phonotactic learners*.[^cf-phonlearn]
+<!-- [e.g., @coleman1997stochastic; @vitevitch2004webbasedsk; @bailey2001determinants; @hayes2008maximum; @hayes2011interpreting; @albright2009feature; @daland2011explaining; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotactic; @mirea2019usingsk]. -->
+<!-- We assume that perception and cognition are continuous processes that can activate categorical -->
+<!-- representations [see @case1995evaluation; @gafos2006dynamics; @lancia2013interaction; @roessig2019dynamics for derivation of linguistic categories from continuous inputs].  -->
+<!-- These categorical representations are the learned symbols of the system in abstract terms, readily equated with co-activation of neural populations in the brain in physical terms [see, e.g., @friederici2011brain; @mesgarani2014phonetic; @tang2017intonational]. -->
+<!-- Once learned and established, symbols can feed top-down inferences that play a role alongside bottom-up inferences in perception [see e.g., @connor2004visual; @pinto2013bottom; @shuai2014temporal]. -->
+<!-- Top-down perception inferences in our framework are different from bottom-up inferences in that top-down inferences access categorical representations, where speech is analyzable in terms of discrete symbols. Top-down inferences are thus limited to predictions that are based on the distributional probability of the recognized symbols, given their (constantly updated) history in the system. -->
+<!-- This type of top-down inferences, which are detached from the functional aspects of the bottom-up mode, echo models of the language user as a *statistical learner* [see, e.g., @christiansen1999power; @frisch2001psychologicalsk; @tremblay2013processing; @roettger2019evidential] and, more specifically, they are very much in line with models of *phonotactic learners* [e.g., @coleman1997stochastic; @vitevitch2004webbasedsk; @bailey2001determinants; @hayes2008maximum; @hayes2011interpreting; @albright2009feature; @daland2011explaining; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotactic; @mirea2019usingsk]. -->
+That said, in this paper we do not explore the statistical nature of top-down inferences. Instead, we operationalize the rationale behind NAP with symbolic machinery to present what we refer to as the top-down model of NAP. 
+<!-- It is therefore important to note that our model implementation for the top-down version of NAP is not an attempt to directly reflect top-down cognitive processes. -->
 <!-- the discrete arithmetic operations that we present in the top-down version of NAP are by no means assumed to model cognitive processes. -->
 <!-- , given that top-down processes in perception are supposed to be limited to probabilistic inferences in our framework.  -->
-We do, however, interpret the results of the discrete operations in the symbolic version of NAP as a good estimation of symbol-based top-down statistical inferences, guided by the rationale of NAP. This choice allows us to present a top-down model with a stronger explanatory value as it uses a similar architecture to that of standard sonority principles, helping to elucidate NAP's core ideas with familiar vocabulary (see Subsection \@ref(sec:naptdmodel)). 
+We interpret the results of the discrete operations in the symbolic version of NAP as a good estimation of symbol-based top-down statistical inferences, guided by the rationale of NAP. This choice allows us to present a top-down model with a stronger explanatory value as it uses a similar architecture to that of standard sonority principles, helping to elucidate NAP's core ideas with familiar vocabulary (see Subsection \@ref(sec:naptdmodel)). 
 
 Moreover, it should be noted that since a cognitively-plausible top-down architecture in our proposed framework is based on the distributional patterns of recognizable symbols, these distributions should be "blind" to their various sources, which include a host of universal and idiosyncratic phonotactic pressures. A true top-down statistical learner is thus inherently "contaminated" by all the different sources that contribute to phonotactics in a given system, without a clear distinction between sonority and other factors. Thus, it remains an open question whether top-down inferences that target only sonority-based phonotactics can be modeled in a more direct and principled way than the one we use here.
 
@@ -485,6 +495,7 @@ Processing of speech occurs bottom-up and top-down simultaneously, and there is 
 
 As two complementary inference routes, the top-down and bottom-up models should not be considered equal. The bottom-up route is the source of learned linguistic distinctions, it is functionally motivated by the rules of physics and the limitations of the sensorimotor system.
 In contrast, the top-down route is based on linguistic experience and superficial inferences that reflect the history of the symbols in the system (i.e., the distributional probabilities of recognizable recurring patterns and their extensions by analogy). In other words, top-down inferences reflect functionally motivated behaviors only indirectly, as the outcome of learning the superficial expressions of functionally-motivated (bottom-up) dynamics.
+
 
 ```{r prepare-mat-per, include=FALSE}
 # 60 x length of the audio file binned each 10 ms; 60 frequency bins with 10 ms for each column 
@@ -1842,7 +1853,15 @@ Our experimental results provide strong support for our synergy of proposals, in
 This work rejects the classic dichotomy between phonetics and phonology, whereby continuous phenomena are considered phonetic, while phonology is exclusively modeled with discrete terms. This problematic dichotomy implies that perception and articulation are continuous while cognition is discrete, a perspective that, indeed, has characterized many areas of the cognitive sciences from the second half of the twentieth century.
 The antithesis of this discrete view of the mind [often dubbed "the computer metaphor of the mind"; see @searle1990cognitive] motivated a shift in cognitive sciences towards more continuous and dynamic models, which has already amassed a compelling body of evidence to support it [e.g., @barlow1972single; @rosen1992temporal; @laks1995connectionistsk; @port1995mind; @case1995evaluation; @kelso1997dynamic; @pouget2003inference; @greenberg2003temporal; @spivey2007continuity; @ghitza2011linking; @giraud2012cortical; @lancia2013interaction; @poeppel2014current].
 
-@tuller1994nonlinear, @gafos2006dynamics, @gafosbenus2006dynamics, and @roessig2019dynamics serve as good examples for the useful application of attractor landscape models in order to link linguistic categorical reflexes with continuous variables. They show that the incorporation of continuity in phonology is not only possible but also advantageous for our understanding of the nature of discrete categories. In essence, works like those in @tuller1994nonlinear, @gafos2006dynamics, @gafosbenus2006dynamics and @roessig2019dynamics present a single model that incorporates continuous and symbolic aspects via the unifying mathematics of attractor landspaes. This is a necessary component in a system where continuous and symbolic entities are assumed to interact, modeling the manner in which the two types of entities can relate to each other. However, this cannot be an exhaustive description of a language system as it lacks the ability to explain the states of the system within which interactions occur (e.g., it cannot predict the categorical landscape of attrctors or the limitations on dynamic events that the system can reliably detect).
+We assume here that perception and cognition are continuous processes that can activate categorical
+representations [see @case1995evaluation; @gafos2006dynamics; @lancia2013interaction; @roessig2019dynamics for derivation of linguistic categories from continuous inputs].
+These categorical representations are the learned symbols of the system in abstract terms, readily equated with co-activation of neural populations in the brain in physical terms [see, e.g., @friederici2011brain; @mesgarani2014phonetic; @tang2017intonational].
+Once learned and established, symbols can feed top-down inferences that play a role alongside bottom-up inferences in perception [see e.g., @connor2004visual; @pinto2013bottom; @shuai2014temporal].
+
+@tuller1994nonlinear, @gafos2006dynamics, @gafosbenus2006dynamics, and @roessig2019dynamics serve as good examples for the useful application of attractor landscape models in order to link linguistic categorical reflexes with continuous variables. They show that the incorporation of continuity in phonology is not only possible but also advantageous for our understanding of the nature of discrete categories. 
+It is therefore the case that previous work has already convincingly shown that a phonetics--phonology dichotomy does not fit well with a classic continuous--discrete dichotomy, as we have good reasons to incorporate continuous entities alongside discrete units within phonology.
+
+In essence, works like those in @tuller1994nonlinear, @gafos2006dynamics, @gafosbenus2006dynamics and @roessig2019dynamics present a single model that incorporates continuous and symbolic aspects via the unifying mathematics of attractor landspaes. This is a necessary component in a system where continuous and symbolic entities are assumed to interact, modeling the manner in which the two types of entities can relate to each other. However, this cannot be an exhaustive description of a language system as it lacks the ability to explain the states of the system within which interactions occur (e.g., it cannot explain or predict the shape and behaviour of the attrctor landscape or address the limitations on dynamic events that the system can reliably detect).
 
 <!-- present a single model of the mapping component from continuous to discrete modes. -->
 Our task here is therefore different, yet related and complementary from a holistic system-wide perspective as we are interested in studying the effects of signal-based and symbol-based processes outside of their interaction.
@@ -1852,15 +1871,14 @@ Our task here is therefore different, yet related and complementary from a holis
 <!-- parts of the system that cannot be unified into a single mathematocal model -->
 <!-- , yet related and complementary from a holistic system-wide perspective.  -->
 In this paper we model the effects of processes that respond to signal-based continuous stimuli as bottom-up processes, and we separately model the effects of processes that are initiated by symbol-based discrete units, which we consider as top-down. 
-It is therefore the case that previous work has already convincingly shown that a phonetics--phonology dichotomy does not fit well with a classic continuous--discrete dichotomy, as we have good reasons to incorporate continuous entities alongside discrete units within phonology.
-
+<!-- It is therefore the case that previous work has already convincingly shown that a phonetics--phonology dichotomy does not fit well with a classic continuous--discrete dichotomy, as we have good reasons to incorporate continuous entities alongside discrete units within phonology. -->
 Our work claims that the continuous--discrete dichotomy in phonology should be linked to the bottom-up--top-down dichotomy, such that both of these two distinct processes can *coexist* in a single language system.
 Bottom-up routes in perception are based on continuous stimuli and they are functional, in the sense that they adhere to the laws of physics and to the limitations of the sensorimotor system of the agents. In contrast, top-down inferences in perception are based on the history of symbolic representations that speakers can learn from experience. 
 This learning ability has its own universal functional limitations but the learned links between the dynamic and symbolic modes are largely arbitrary as they rely on the superficial history presented by a given language system.
 These symbols and their probabilistic distributions are constantly updated, reflecting knowledge about the distribution of categorically analyzable units of speech.
 
-In this paper we modeled the notion of sonority and its contribution to linguistic sound systems with the assumption that the two different routes---bottom-up and top-down---are both active when speech inferences take place. Our bottom-up model uses continuous data (periodic energy), dynamic principles (competition), and functional motivation (syllables carry pitch information) to model sonority. Our top-down model is based on generalizations over the discrete segmental units in the system and their distribution given bottom-up sonority restrictions (note that our top-down model is not a true statistical learner for reasons that we explain in Subsection \@ref(sec:complementary)). 
-The results of model stacking based on our experimental data (see Table \@ref(tab:modelstacking)) support this move, showing that the combined contribution of the two NAP models is somewhat complementary (65% + 14%), and, when taken together, they make 79% of the combined contribution of all the six sonority models to a maximized elpd score, reflecting the combined ability of the models to predict unseen forms (see Subsection \@ref(sec:ModelComparison2)).
+In this study we modeled the notion of sonority and its contribution to linguistic sound systems with the assumption that the two different routes---bottom-up and top-down---are both active when speech inferences take place. Our bottom-up model uses continuous data (periodic energy), dynamic principles (competition), and functional motivation (syllables carry pitch information) to model sonority. Our top-down model is based on generalizations over the discrete segmental units in the system and their distribution given bottom-up sonority restrictions (note that our top-down model is not a true statistical learner for reasons that we explain in Subsection \@ref(sec:complementary)). 
+The results of model stacking based on our experimental data (see Table \@ref(tab:modelstacking)) support this move, showing that the combined contribution of the two NAP models is relatively complementary (65% + 14%), and, when taken together, they make 79% of the combined contribution of all the six sonority models to a maximized elpd score, reflecting the combined ability of the models to predict unseen forms (see Subsection \@ref(sec:ModelComparison2)).
 
 ##		Phonotactic division of labor: A holistic account of /s/-stop clusters {#sec:division}
 
@@ -1883,7 +1901,7 @@ Furthermore, our dual-route strategy to modeling (see Subsection \@ref(sec:dicho
 Lastly, this study also provides compelling motivations and strong evidence that support our proposal to link the notion of sonority with periodic energy in the acoustic signal. This proposal entails that the role of periodic energy is of great importance to linguistic analysis of speech, beyond the scope of the current proposal---a partial list of relevant topics includes:
 (i) acoustic descriptions of prosodic *weight* and prosodic *prominence* in terms of periodic energy mass;
 (ii) automatic syllabification procedures based on the smoothed fluctuation rates of the periodic energy curve [useful for a myriad of tasks, including speech rhythmicity studies; see, e.g., @galves2002sonoritysk; @tilsen2013speech; @rasanen2018pre; @lin2020hit], and;
-(iii) improved visualization and analysis of pitch contours in intonation research based on the interaction of the periodic energy and the F0 trajectories [see @albert2018using; and @cangemi2019modellingsk for continuous visualization and quantification procedures in intonational phonology using periodic energy].
+(iii) improved visualization and analysis of pitch contours in intonation research based on the interaction of the periodic energy and the F0 trajectories [see @albert2018using; @cangemi2019modellingsk; and @albert2020propersk for continuous visualization and quantification procedures in intonational phonology using periodic energy].
 
 # Methods {#sec:methods}
 
@@ -1963,6 +1981,9 @@ A training session of ten trials preceded the experimental trials, allowing the 
 [^cf-mora]: Moras are used to represent quantitative differences between light and heavy syllables (weight sensitivity), such that light syllables contain one mora while heavier syllables contain two (and sometimes even three) moras [see @hyman1984atheory; @mccarthy1990footsk; @hayes1989compensatory; @ito1989prosodic; @zec1995sonority; @zec2003prosodic].
 
 [^cf-perception]: This view of sonority is explicitly perceptual. However, it does not contradict and it should be considered as complementary to syllabic descriptions from an articulatory point of view, such as timing coordination and phase relations that characterize syllabic organization in Articulatory Phonology (@browman1992articulatory; @macneilage1998frame; @goldstein2007syllablesk; @hermes2013phonologysk; @gafos2014stochastic).
+
+<!-- [^cf-statlearn]: See, e.g., @christiansen1999power; @frisch2001psychologicalsk; @tremblay2013processing; @roettger2019evidential. -->
+[^cf-phonlearn]: For *statistical learners* in general see, e.g., @christiansen1999power; @frisch2001psychologicalsk; @tremblay2013processing; @roettger2019evidential. For *phonotactic learners* see, e.g., @coleman1997stochastic; @vitevitch2004webbasedsk; @bailey2001determinants; @hayes2008maximum; @hayes2011interpreting; @albright2009feature; @daland2011explaining; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotactic; @mirea2019usingsk.
 
 <!-- [^cf-stress]: It is important to note that weight sensitivity is not a universal process, as stress assignment patterns vary from language to language, and not all languages even have stress to begin with. However, it is one of the naturally occurring stress assignment patterns that many unrelated languages exhibit, e.g., Arabic, Tibetan (Lhasa), Wolof, Finnish, and Latin [see @goedemans2013weight; and @gordon2006syllableweight 23 for more exhaustive lists]. -->
 
