ProPer reference update

--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2020-10-16 01:25:25 +0200 
+%% Created for Aviad Albert at 2020-10-19 18:32:10 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{albert2020propersk,
+	Author = {Albert, Aviad and Cangemi, Francesco and Ellison, T. Mark and Grice, Martine},
+	Citation_Identifier = {Albert 2020},
+	Date-Added = {2020-10-19 18:28:51 +0200},
+	Date-Modified = {2020-10-19 18:31:49 +0200},
+	Doi = {10.17605/OSF.IO/28EA5},
+	Month = {8},
+	Publicationstatus = {Published},
+	Publisher = {OSF},
+	Title = {{ProPer}: {PROsodic} analysis with {PERiodic} energy},
+	Url = {osf.io/28ea5},
+	Uuid = {F95FE3CC-559E-405C-AF63-5B088BCEFC56},
+	Year = {2020},
+	Bdsk-Url-1 = {osf.io/28ea5},
+	Bdsk-Url-2 = {https://doi.org/10.17605/OSF.IO/28EA5}}
 
 @article{nicenboim2018exploratorysk,
 	Abstract = {Given the replication crisis in cognitive science, it is important to consider what researchers need to do in order to report results that are reliable. We consider three changes in curren...},
